# hnetd

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  TODO  build-debian.sh  build-generic.sh  hnetd_wireshark.lua  run_coverage.sh  run_net_stress.sh
doc/: hncp-implementation-notes.txt
examples/: libdncp_example.c
generic/: ddz.script  dhcp.script  dhcpv6.script  hnetd-backend  hnetd-routing  multicast.script  ohp.script  tunnel.script  utils.script
openwrt/: autowifi.script  hnet.sh
openwrt/luci/htdocs/luci-static/resources/: hnet-monitor.js  vis.js
openwrt/luci/luasrc/controller/: hnet.lua
openwrt/luci/luasrc/model/cbi/admin_network/: hnet.lua
openwrt/luci/luasrc/view/: hnet-status.htm
src/: bitops.c  bitops.h  btrie.c  btrie.h  crypto.c  crypto.h  dhcp.h  dhcpv6.h  dncp.c  dncp.h  dncp_i.h  dncp_io.c  dncp_io.h  dncp_notify.c  dncp_profile.h  dncp_proto.c  dncp_proto.h  dncp_timeout.c  dncp_trust.c  dncp_trust.h  dncp_util.h  dns_util.h  dtls.c  dtls.h  elsa.c  elsa.h  exeq.c  exeq.h  hcp.c  hcp.h  hcp_bfs.c  hcp_bfs.h  hcp_i.h  hcp_io.c  hcp_notify.c  hcp_pa.c  hcp_pa.h  hcp_proto.c  hcp_proto.h  hcp_recv.c  (+80 more)
test/: cert1.pem  cert2.pem  eea339da.0  eea339da.1  fake_fork_exec.h  fake_iface.h  fake_log.h  fake_random.h  fake_uloop.h  key1.pem  key2.pem  net_sim.h  prefixes_library.h  smock.h  sput.h  test_bitops.c  test_btrie.c  test_dncp_nio.c  test_dncp_trust.c  test_dtls.c  test_dummy.c  test_exeq.c  test_hcp.c  test_hcp_bfs.c  test_hcp_net.c  test_hcp_nio.c  test_hcp_pa.c  test_hcp_sd.c  test_hncp.c  test_hncp_bfs.c  test_hncp_crypto.c  test_hncp_io.c  test_hncp_multicast.c  test_hncp_net.c  test_hncp_nio.c  test_hncp_pa.c  test_hncp_sd.c  test_hncp_trust.c  test_iface.c  test_pa.c  (+8 more)
